# metricdp-flower-pytorch

./: .gitignore  README.md  pyproject.toml
experiments/: CONTROLLED_COMPARISON.md  compare.py
experiments/cia/: README.md  attack.py  dataset.py  runner.py
experiments/port_equivalence/: README.md  compare.py  legacy_runner.py  modern_runner.py  original_metricdp_fixed_clipping.py  test_equivalence.py
experiments/reproduce/: client.py  detailed_evaluation.py  matrix_runner.py  paper_cnn.py  paper_loss.py  paper_strategies.py  paper_training.py  runner.py  server.py  summarize_noise_sweep.py  sweep_48_clients.py  sweep_8_clients.py  sweep_noise_multiplier.py
metricdp_pytorch/: __init__.py  client_app.py  data_module.py  metricdp_strategy.py  server_app.py  strategy_factory.py  task.py
metricdp_pytorch/utils/: __init__.py  data.py  device.py  runtime.py  split_data.py
results/: benchmark_status.txt  evaluate_saved_model.py  orchestrator_status.txt  paper_reproduction_manifest.tsv  paper_reproduction_summary.json  run_benchmark.sh  run_h100_matrix.sh  run_one_detailed.sh  summarize_detailed_results.py  tasks.tsv
results-old-20260722-160446/: paper_reproduction_manifest.tsv  paper_reproduction_preswitch_inventory.tsv
results-old-20260722-160446/dataloader-workers/: run_matrix.sh
results-old-20260722-160446/paper_reproduction_runs/: main__homogeneous__global-dp__fedavg__noise-0.01__seed-42.json  main__homogeneous__global-dp__fedavgm__noise-0.01__seed-42.json  main__homogeneous__global-dp__fedavgm__noise-0.01__seed-43.json  main__homogeneous__global-dp__fedmedian__noise-0.01__seed-43.json  main__homogeneous__global-dp__fedopt__noise-0.01__seed-43.json  main__homogeneous__global-dp__fedopt__noise-0.01__seed-45.json  main__homogeneous__global-dp__fedprox__noise-0.01__seed-42.json  main__homogeneous__global-dp__fedprox__noise-0.01__seed-43.json  main__homogeneous__global-dp__fedprox__noise-0.01__seed-44.json  main__homogeneous__global-dp__fedyogi__noise-0.01__seed-43.json  main__homogeneous__metric-privacy__fedavgm__noise-0.01__seed-43.json  main__homogeneous__metric-privacy__fedavgm__noise-0.01__seed-44.json  main__homogeneous__metric-privacy__fedmedian__noise-0.01__seed-44.json  main__homogeneous__metric-privacy__fedyogi__noise-0.01__seed-42.json  (+15 more)
results-probe-fedopt-fedyogi/: README.md  probe-summary.json  run-controls.sh  run-probe.sh
results-reproduce-fedyogi-rerun-4clients/: README.md  summary.json
results-reproduce-paper/: paper_reproduction_results.md  run_benchmark.sh  run_h100_matrix.sh  run_one_detailed.sh  summarize_detailed_results.py
results-reproduce-paper-failed/: paper_reproduction_preswitch_inventory.tsv
results-reproduce-step0-failed/: paper_reproduction_progress.md  paper_reproduction_results.md  run_paper_matrix.sh
tests/: test_data_utils.py  test_metricdp_strategy.py  test_strategy_factory.py
(+523 files in other folders)
