[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metricdp-pytorch"
version = "0.1.0"
description = "Metric-aware server-side differential privacy with Flower and PyTorch"
license = {file = "LICENSE"}
requires-python = ">=3.11,<3.14"
dependencies = [
    "flwr[simulation]>=1.32.1,<2.0",
    "numpy>=2.0",
    "torch==2.10.0",
    "torchvision==0.25.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
addopts = "-m 'not reproducibility'"
markers = [
    "reproducibility: cross-version experiment requiring an isolated legacy environment",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "olcay"
fab-format-version = 1
flwr-version-target = "1.32.1"

[tool.flwr.app.components]
serverapp = "metricdp_pytorch.server_app:app"
clientapp = "metricdp_pytorch.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
num-clients = 10
fraction-evaluate = 1.0
local-epochs = 1
learning-rate = 0.1
batch-size = 32
noise-multiplier = 1.0
clipping-norm = 5.0
save-model = false

[tool.flwr.federations.local-simulation.options]
num-supernodes = 10
