[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metricdp-pytorch"
version = "0.1.0"
description = "Metric-aware server-side differential privacy with Flower and PyTorch"
license = {file = "LICENSE"}
requires-python = ">=3.11,<3.14"
dependencies = [
    "datasets>=3.0,<5.0",
    "flwr[simulation]>=1.32.1,<2.0",
    "numpy>=2.0",
    "scikit-learn>=1.9.0",
    "torch==2.10.0",
    "torchvision==0.25.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
addopts = "-m 'not reproducibility'"
markers = [
    "reproducibility: cross-version experiment requiring an isolated legacy environment",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "olcay"
fab-format-version = 1
flwr-version-target = "1.32.1"

[tool.flwr.app.components]
serverapp = "experiments.reproduce.server:app"
clientapp = "experiments.reproduce.client:app"

[tool.flwr.app.config]
# Defaults reproduce the paper with four Alzheimer MRI clients.
partition-mode = "homogeneous"
partition-profile = "auto"
client-weights = ""
data-module = "experiments.reproduce.dataset.alzheimer:create_data_module"
data-cache-dir = ""
privacy = "metric-privacy"
aggregation = "fedavg"
seed = 42
num-server-rounds = 20
num-clients = 4
fraction-evaluate = 1.0
local-epochs = 5
learning-rate = 0.001
batch-size = 32
initialization-batch-size = 32
initialization-epochs = 20
initialization-learning-rate = 0.001
max-client-samples = 0
max-test-samples = 0
noise-multiplier = 0.01
clipping-norm = 5.0
output-dir = "results/manual"
run-name = "manual"
save-model = false
